Add /user/info route
