# app/app.js
@@ -24,6 +24,7 @@ var client = require(__base + 'app/route/v1/client');
 
 var userLogin = require(__base + 'app/route/v1/user/login');
 var userFriend = require(__base + 'app/route/v1/user/friend');
+var userInfo = require(__base + 'app/route/v1/user/info');
 
 var authToken = require(__base + 'app/route/v1/auth/token');
 var authRenew = require(__base + 'app/route/v1/auth/renew');
@@ -33,6 +34,7 @@ app.use('/ping', ping);
 app.use('/v1/client', client);
 
 app.use('/v1/user/login', userLogin);
+app.use('/v1/user/info', userInfo);
 app.use('/v1/user/friend', userFriend);
 
 app.use('/v1/auth/token', authToken);
